# dakje

./: .gitignore  GSOC_2021.md  GSOC_2021_guide.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  heroku.yml  openclaw_documentation_README.md  traefik.yml
.github/workflows/: CI.yml  deploy.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backend.dockerfile  pyproject.toml
backend/app/: .coverage  .pre-commit-config.yaml  pyproject.toml  setup.cfg
backend/app/app/: api.py  config.py  main.py  schemas.py  services.py
backend/app/app/routes/: sentence.py  tokens.py
backend/app/app/tests/: test_api.py  test_main.py  test_sentence_token.py  test_token.py
backend/app/scripts/: build_dictionary.py
backend/config/: api_router.py  asgi.py  urls.py  wsgi.py
backend/config/config/: settings.py  urls.py
backend/config/settings/: base.py  local.py  production.py
backend/dakje/grader/: apps.py  serializers.py  views.py
backend/dakje/spellcheck/: __init__.py  apps.py  serializers.py  views.py
backend/dakje/users/: admin.py  apps.py  models.py  serializers.py  views.py
backend/dakje/users/migrations/: 0001_initial.py
frontend/: .eslintrc.js  Dockerfile  README.md  babel.config.js  jest.config.js  jsconfig.json  nginx.conf  package-lock.json  package.json  quasar.conf.js
frontend/__tests__/: app.spec.js
frontend/src/: App.css  App.vue
frontend/src/assets/: sampleUploadFile.txt
frontend/src/boot/: axios.js  i18n.js
frontend/src/components/: Download.vue  Editor.vue  Header.vue  Navbar.vue  ProfilerDashboard.vue  ProfilerDashboardLevelsTable.vue  ProfilerDashboardSentenceStatistic.vue  ProfilerDashboardTokenCoverage.vue  Sidebar.vue  Suggestion.vue  TextEditor.vue  Token.vue  Word.vue
frontend/src/config/: index.js
frontend/src/css/: app.scss  quasar.variables.scss
frontend/src/i18n/en-US/: index.js
frontend/src/layouts/: MainLayout.vue  SecondLayout.vue
frontend/src/pages/: HomePage.vue  Index.vue  Spellcheck.vue
frontend/src/router/: routes.js
frontend/src/store/: index.js  store.js
frontend/src/store/base/: actions.js  mutations.js  state.js
frontend/src/tests/: app.spec.js
frontend/src/utils/: conversion.js  textComplexity.js
(+8 files in other folders)
