[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["tenzin <ten13zin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
botok = "^0.8.1"
symspellpy = "^6.7.0"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
