[tool.poetry]
name = "dakje-backend"
version = "0.1.0"
description = "Dakje backend"
authors = ["tenzin <ten13zin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
